GNOME Bugzilla – Bug 635333
Auto-complete no longer works over SFTP in the Nautilus Location Bar
Last modified: 2011-02-04 21:36:09 UTC
========== Overview: ========== When using Nautilus to browse local files, the text-based location bar autocompletes folder names as they are typed. This autocomplete feature also used to work when using Nautilus to browse remote systems through SFTP. For example, I have access to several systems with Nautilus 2.30.1 (running in Ubuntu 10.04 Lucid Lynx with GNOME 2.30.2), in which autocomplete currently works correctly over SFTP. Recently, I've migrated two of my systems to Ubuntu 10.10 Maverick Meerkat running GNOME 2.32.0 with Nautilus 2.32.0. Autocomplete still works on local directories, but no longer seems to be active over SFTP. I work with Nautilus through SFTP a lot, and autocomplete is a very useful feature that has saved me a lot of time and effort -- it's sad to see that it no longer works. ========== Steps to Reproduce: ========== 1) Display the Nautilus location bar (either use ctrl-L in Nautilus to display the location bar, or modify the /apps/nautilus/preferences/always_use_location_entry to 'true' using the GNOME configuration tool to permanently display the location bar). 2) Use Nautilus to SFTP to a remote system. 3) Start typing the name of a directory that exists on the remote system in the Nautilus location bar. ========== Actual Results: ========== Nautilus does not autocomplete the directory name over SFTP ========== Expected Results: ========== Nautilus should autocomplete directory names over SFTP ========== Build Date & Platform ========== Nautilus 2.32.0 on Ubuntu 10.10 Maverick Meerkat ========== Additional Builds and Platforms ========== Doesn't occur in Nautilus 2.30.1 on Ubuntu 10.04 Lucid Lynx
Created attachment 179868 [details] [review] proposed patch Hi, the attached patch fixes this bug. The problem is that while checking for relative paths in nautilus-location-entry.c::try_to_expand_path (), URIs with a scheme aren't checked for, inducing a bogus absolute_path. The patch also fixes a possible leak.
Review of attachment 179868 [details] [review]: Looks good, thanks.
Pushed now.