location-entry: fix auto-complete for non-local URIs

https://bugzilla.gnome.org/show_bug.cgi?id=635333